RESOLVED FIXED268921
REGRESSION(272969@main): Null-deref crash in SourceBufferPrivateAVFObjC::trackDidChangeEnabled
https://bugs.webkit.org/show_bug.cgi?id=268921
Summary REGRESSION(272969@main): Null-deref crash in SourceBufferPrivateAVFObjC::trac...
Jer Noble
Reported 2024-02-07 08:51:14 PST
REGRESSION(272969@main): Null-deref crash in SourceBufferPrivateAVFObjC::trackDidChangeEnabled
Attachments
Jer Noble
Comment 1 2024-02-07 08:51:20 PST
Jer Noble
Comment 2 2024-02-07 08:53:57 PST
EWS
Comment 3 2024-02-08 16:24:54 PST
Committed 274323@main (56b164c3ab85): <https://commits.webkit.org/274323@main> Reviewed commits have been landed. Closing PR #24009 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.